IDEA-222088 Hotswap takes a long time when nothing to reload
GitOrigin-RevId: 43f925ca50def11bf20ee5052575a5b79130d26f