@@ -15,9 +15,12 @@ import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.containers.JBIterable;
 import gnu.trove.THashMap;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class HotSwapManager {
   private final Map<DebuggerSession, Long> myTimeStamps = new HashMap<>();
@@ -48,17 +51,20 @@ public class HotSwapManager {
     myTimeStamps.put(session, Long.valueOf(tStamp));
   }
 
-  public Map<String, HotSwapFile> scanForModifiedClasses(final DebuggerSession session, final HotSwapProgress progress) {
+  public Map<String, HotSwapFile> scanForModifiedClasses(@NotNull DebuggerSession session,
+                                                         @Nullable Stream<String> outputPaths,
+                                                         @NotNull HotSwapProgress progress) {
     DebuggerManagerThreadImpl.assertIsManagerThread();
 
     final long timeStamp = getTimeStamp(session);
     final Map<String, HotSwapFile> modifiedClasses = new HashMap<>();
 
-    List<String> outputPaths = ReadAction.compute(
-      () -> JBIterable.of(OrderEnumerator.orderEntries(myProject).classes().getRoots())
-        .filterMap(o -> o.isDirectory() && !o.getFileSystem().isReadOnly() ? o.getPath() : null)
-        .toList());
-    for (String path : outputPaths) {
+    List<String> paths = outputPaths != null ? outputPaths.collect(Collectors.toList()) :
+                         ReadAction.compute(() -> JBIterable.of(OrderEnumerator.orderEntries(myProject).classes().getRoots())
+                           .filterMap(o -> o.isDirectory() && !o.getFileSystem().isReadOnly() ? o.getPath() : null)
+                           .toList()
+                         );
+    for (String path : paths) {
       String rootPath = FileUtil.toCanonicalPath(path);
       collectModifiedClasses(new File(path), rootPath, rootPath + "/", modifiedClasses, progress, timeStamp);
     }
@@ -131,9 +137,16 @@ public class HotSwapManager {
     return result;
   }
 
+  @NotNull
+  public static Map<DebuggerSession, Map<String, HotSwapFile>> scanForModifiedClasses(@NotNull List<? extends DebuggerSession> sessions,
+                                                                                      @NotNull HotSwapProgress swapProgress) {
+    return scanForModifiedClasses(sessions, null, swapProgress);
+  }
+
 
   @NotNull
   public static Map<DebuggerSession, Map<String, HotSwapFile>> scanForModifiedClasses(@NotNull List<? extends DebuggerSession> sessions,
+                                                                                      @Nullable Stream<String> outputPaths,
                                                                                       @NotNull HotSwapProgress swapProgress) {
     final Map<DebuggerSession, Map<String, HotSwapFile>> modifiedClasses = new THashMap<>();
     final MultiProcessCommand scanClassesCommand = new MultiProcessCommand();
@@ -147,7 +160,8 @@ public class HotSwapManager {
         @Override
         protected void action() {
           swapProgress.setDebuggerSession(debuggerSession);
-          Map<String, HotSwapFile> sessionClasses = getInstance(swapProgress.getProject()).scanForModifiedClasses(debuggerSession, swapProgress);
+          Map<String, HotSwapFile> sessionClasses =
+            getInstance(swapProgress.getProject()).scanForModifiedClasses(debuggerSession, outputPaths, swapProgress);
           if (!sessionClasses.isEmpty()) {
             modifiedClasses.put(debuggerSession, sessionClasses);
           }
